# synthetic_data_agent

./: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
src/synthetic_data_agent/: __init__.py  config.py
src/synthetic_data_agent/agents/: callbacks.py  orchestrator.py
src/synthetic_data_agent/agents/specialists/entity_graph/: agent.json  agent.py
src/synthetic_data_agent/agents/specialists/generator/: agent.json  agent.py
src/synthetic_data_agent/agents/specialists/pii_handler/: agent.json  agent.py
src/synthetic_data_agent/agents/specialists/profiler/: agent.json  agent.py
src/synthetic_data_agent/agents/specialists/validator/: agent.json  agent.py
src/synthetic_data_agent/ml/: __init__.py  artifact_store.py  base.py  copula_trainer.py  ctgan_trainer.py  data_fingerprint.py  model_registry.py  strategy_selector.py  timegan_trainer.py  tvae_trainer.py
src/synthetic_data_agent/models/: __init__.py  column_profile.py  entity_graph.py  generation_plan.py  quality_report.py
src/synthetic_data_agent/pii/: __init__.py  detector.py  generators.py  leakage_auditor.py
src/synthetic_data_agent/server/: main.py
src/synthetic_data_agent/tools/: __init__.py  circuit_breaker.py  databricks_tools.py  knowledge_base.py  registry_tools.py  retry.py  semantic_memory.py  value_ledger.py
tests/unit/: test_generators.py  test_id_registry.py  test_pii_detector.py
